--- a/src/components/card_form.css
+++ b/src/components/card_form.css
@@ -37,3 +37,14 @@
   .card-form button:hover {
     background-color: #600000;
   }
+
+.multi-select {
+  height: 100px;
+}
+
+.tip {
+  display: block;
+  color: #666;
+  margin-top: 4px;
+  font-size: 0.8em;
+}
