--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Fraunces', serif; /* Replace the system fonts with Fraunces */
   line-height: 1.5;
   font-weight: 400;
 
